--- a/.env.local
+++ b/.env.local
@@ -3,5 +3,5 @@ MY_EMAIL=ankurbansal@properfame.com
 FROM_EMAIL=contact@properfame.com
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZW5oYW5jZWQtcXVhZ2dhLTc4LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_0LF6k6NT8anmGKkUMzKgXyihDQVhoyGVDrWRHitBQM
-MONGO_URI=mongodb+srv://madhav:123@cluster0.zulbw.mongodb.net/
 PAGESPEED_API_KEY="AIzaSyCmJqnyb4AUAhzUqeaYDC_1ZLPIYriOZ5E"
+MONGO_URI=mongodb+srv://ankurbansal:ankurbansal@cluster0.mrti6.mongodb.net/
