complete till hackathon

--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZW5oYW5jZWQtcXVhZ2dhLTc4LmNsZXJrLmFjY2
 CLERK_SECRET_KEY=sk_test_0LF6k6NT8anmGKkUMzKgXyihDQVhoyGVDrWRHitBQM
 PAGESPEED_API_KEY="AIzaSyCmJqnyb4AUAhzUqeaYDC_1ZLPIYriOZ5E"
 MONGO_URI=mongodb+srv://ankurbansal:ankurbansal@cluster0.mrti6.mongodb.net/
+OPENAI_API_KEY=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
+
