--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "node-cron": "^3.0.3",
+    "openai": "^4.71.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "recharts": "^2.13.3",
